--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,14 @@
 ﻿spring:
   profiles:
     active:
-      dev
+    - dev
+---
 spring:
   profiles: dev
+  application:
+    name: microservicecloud-config-atguigu-dev
+---
+spring:
+  profiles: test
   application:
     name: microservicecloud-config-atguigu-test
